fixed mobile responsiveness spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,7 +254,7 @@ footer {
         font-size: 2em;
     }
     .main-header {
-        margin-top: 10px;
+        padding-top: 20px;
     }
 
     .container {
